--- a/slides-1.html
+++ b/slides-1.html
@@ -22,10 +22,7 @@
 
   <section>
     <h2>Images</h2>
-    <img src="images/CarnapLine.png">
-  </section>
-
-  <section>
+    <img height="80%" src="images/CarnapLine.png">
   </section>
 
   <section>
@@ -36,8 +33,9 @@
            data-carnap-system="prop"
            data-carnap-guides="montague"
            data-carnap-options="font resize">
-test
+Show ((P -> Q)-> P) -> P
       </pre>
+  </section>
 
   <section>
     <h2>Bullet List</h2>
