--- a/slides-1.html
+++ b/slides-1.html
@@ -61,7 +61,7 @@ Show ((P -> Q)-> P) -> P
 </article>
 
 <script src="build/build.js"></script>
-<script src='https://carnap.io/static/ghcjs/allactions/runmain.js'>
+<script src='https://carnap.io/static/ghcjs/allactions/runmain.js'></script>
 
 </body>
 </html>
