--- a/src/slides-1.html
+++ b/src/slides-1.html
@@ -15,9 +15,9 @@
 <article class="deck">
 
   <section>
-    <h1>Slide Template</h1>
-    <p>Navigate with left and right keys. </p>
-    <p>Swiping will also work on a touch screen.</p>
+    <h1>Sean Slide Template</h1>
+    <p>Sean Navigate with left and right keys. </p>
+    <p>Sean Swiping will also work on a touch screen.</p>
   </section>
 
   <section>
@@ -38,20 +38,20 @@ Show ((P -> Q)-> P) -> P
   </section>
 
   <section>
-    <h2>Bullet List</h2>
+    <h2>Sean Bullet List</h2>
     <ul class="build build-items">
-      <li>Bullet 1</li>
-      <li>Bullet 2</li>
-      <li>Bullet 3</li>
+      <li>Sean Bullet 1</li>
+      <li>Sean Bullet 2</li>
+      <li>Sean Bullet 3</li>
     </ul>
   </section>
 
   <section>
-    <h2>Just the beginning…</h2><br>
+    <h2>Sean Just the beginning…</h2><br>
     <ul class="build build-items">
-      <li>Edit HTML markup in <em class="path">src/index.html</em></li>
-      <li>Edit <a href="http://stylus-lang.com">Stylus</a> styles in <em class="path">src/styles/user.styl</em></li>
-      <li>Edit JavaScript in <em class="path">src/scripts/main.js</em></li>
+      <li>Sean Edit HTML markup in <em class="path">src/index.html</em></li>
+      <li>Sean Edit <a href="http://stylus-lang.com">Stylus</a> styles in <em class="path">src/styles/user.styl</em></li>
+      <li>Sean Edit JavaScript in <em class="path">src/scripts/main.js</em></li>
     </ul>
     <br>
     <ul class="build">
