Do not package fonts. Closes #1.

--- a/src/slides-1.html
+++ b/src/slides-1.html
@@ -32,7 +32,7 @@
            data-carnap-submission="none"
            data-carnap-system="prop"
            data-carnap-guides="montague"
-           data-carnap-options="font resize">
+           data-carnap-options="font">
 Show ((P -> Q)-> P) -> P
       </pre>
   </section>
