--- a/slides-1.html
+++ b/slides-1.html
@@ -31,7 +31,7 @@
   <section>
     <h1>Template for Carnap Slides</h1>
     <p>This is a template for making your own interactive slides with Carnap.</p> 
-    <p>The basic framework for everything is <a href="https://github.com/bespoke/bespoke">bespoke.js</a>.</p>
+    <p>The basic framework for everything is <a href="http://www.markdalgleish.com/projects/bespoke.js/">bespoke.js</a>.</p>
     <p>Navigate with left and right keys. </p>
     <p>Swiping will also work on a touch screen.</p>
   </section>
@@ -146,8 +146,8 @@ Show ((P -> Q)-> P) -> P
   <section>
     <p>And there's much more you can do</p>
     <ul class="build build-items">
-      <li>Edit HTML files under <em class="path">src</em> to create your own slide decks</li>
-      <li>Edit <a href="http://stylus-lang.com">Stylus</a> styles in <em class="path">src/styles/user.styl</em> to affect the look of your slides</li>
+      <li>Edit HTML files under <em class="path">src</em> to create your own slide decks.</li>
+      <li>Edit <a href="http://stylus-lang.com">Stylus</a> styles in <em class="path">src/styles/user.styl</em> to affect the look of your slides.</li>
       <li>Edit JavaScript in <em class="path">src/scripts/main.js</em> to achieve other interactive effects.</li>
     </ul>
     <p class="build">You can also find basic information on installing the slide-builder and getting your slides online in the <a href="https://github.com/gleachkr/SlideTemplate/README.md" >README</a></p>
@@ -158,7 +158,7 @@ Show ((P -> Q)-> P) -> P
       Powered by Bespoke JS, due to <a href="https://twitter.com/markdalgleish"> -@markdalgleish</a>
     </p>
     <p>
-        For really advanced usage, check out their <a href="https://github.io/bespoke/bespoke" target="_blank">documentation and examples</a>.
+        For really advanced usage, check out their <a href="https://github.com/bespokejs/bespoke" target="_blank">documentation and examples</a>.
     </p>
   </section>
 </article>
