--- a/src/slides-1.html
+++ b/src/slides-1.html
@@ -98,6 +98,10 @@ Show ((P -> Q)-> P) -> P
            data-carnap-options="hiddenGivens"
            data-carnap-tabletype="validity">
       </pre>
+    </section>
+    <section>
+      <p>(The below is a partial table looking for a counterexample to equivalence)
+      </p>
       <pre data-carnap-type="truthtable"
            data-carnap-goal="~P/\~Q,~P\/~Q"
            data-carnap-submission="none"
@@ -132,6 +136,24 @@ Show ((P -> Q)-> P) -> P
           <p><a href="https://gleachkr.github.io/ProofJS/">https://gleachkr.github.io/ProofJS/</a></p>
           <p> for more info on building tree-style proofs with ProofJS.</p>
       </div>
+  </section>
+  <section>
+      <h2>Models</h2>
+      <p>(this exercise is looking for a counterexample to validity)</p>
+      <pre data-carnap-type="countermodeler"
+           data-carnap-countermodelertype="validity"
+           data-carnap-goal="AxEyF(x,y):|-:ExAyF(x,y)">
+      </pre>
+  </section>
+
+  <section>
+      <h2>Translations</h2>
+      <pre data-carnap-type="translate"
+           data-carnap-goal="Ax(F(x)->G(x))"
+           data-carnap-transtype="first-order"
+           data-carnap-problem="every dog has his day"
+           data-carnap-options="nocipher">Every dog has his day</pre>
+      <p>where <code>F</code> is "is a dog", and <code>G</code> is "has his day"</p>
   </section>
 
   <section>
