--- a/slides-1.html
+++ b/slides-1.html
@@ -87,6 +87,7 @@ Show ((P -> Q)-> P) -> P
       <!-- ^^^ You need to be careful about whitespace when prepopulating the
           deduction. That's why the Show line above has no leading whitespace.
       -->
+      <p>Derivation documentation <a href="https://carnap.io/shared/gleachkr@gmail.com/carnap-derivations.pandoc" target="_blank">here</a></p>
   </section>
 
   <section>
@@ -110,6 +111,7 @@ Show ((P -> Q)-> P) -> P
            --T----F--
            --F----T--
       </pre>
+      <p>Truth table documentation <a href="https://carnap.io/shared/gleachkr@gmail.com/carnap-truth-tables.pandoc" target="_blank">here</a></p>
   </section>
 
   <section>
@@ -144,6 +146,8 @@ Show ((P -> Q)-> P) -> P
            data-carnap-countermodelertype="validity"
            data-carnap-goal="AxEyF(x,y):|-:ExAyF(x,y)">
       </pre>
+
+      <p>Model checker documentation <a href="https://carnap.io/shared/gleachkr@gmail.com/carnap-modelchecker.pandoc" target="_blank">here</a></p>
   </section>
 
   <section>
@@ -153,7 +157,9 @@ Show ((P -> Q)-> P) -> P
            data-carnap-transtype="first-order"
            data-carnap-problem="every dog has his day"
            data-carnap-options="nocipher">Every dog has his day</pre>
+      <!-- whitespace is also important here ^^^ -->
       <p>where <code>F</code> is "is a dog", and <code>G</code> is "has his day"</p>
+      <p>Translation documentation <a href="https://carnap.io/shared/gleachkr@gmail.com/carnap-translation.pandoc" target="_blank">here</a></p>
   </section>
 
   <section>
