--- a/slides-1.html
+++ b/slides-1.html
@@ -160,5 +160,9 @@ MathJax = {
   </pre>
   </section>
 
+<script src="build/build.js"></script>
+<script src='https://carnap.io/static/ghcjs/allactions/runmain.js'></script>
+
+
 </body>
 </html>
