--- a/src/slides-1.html
+++ b/src/slides-1.html
@@ -29,7 +29,7 @@
 
   <!-- Each pair of section tags corresponds to one slide -->
   <section>
-    <h1>Template for Carnap Slides Test</h1>
+    <h1>Template for Carnap Slides Test Test</h1>
     <p>This is a template for making your own interactive slides with Carnap.</p>
     <p>The basic framework for everything is <a href="http://www.markdalgleish.com/projects/bespoke.js/">bespoke.js</a>.</p>
     <p>Navigate with left and right keys. </p>
