Made a big change
Big chage here

--- a/src/truth-tables.html
+++ b/src/truth-tables.html
@@ -40,7 +40,7 @@ MathJax = {
 
   <!-- Slide -->
   <section>
-  <h2>Determining truth-values test</h2>
+  <h2>Determining truth-values MAKING BIG CHANGES HERE</h2>
   <p>The basic question is: how is the truth-value of a complex proposition a function of the truth-values of its corresponding parts? More specifically, we can ask: Consider $p\rightarrow (q\vee r)$. Suppose you knew that $r$ is false while $p,q$ are true. Is $p\rightarrow (q\vee r)$ true or false?</p>
   <p>We develop a general method for answering these questions. This is useful since often the sentences whose truth we’re interested in are complex, and so the method gives us a way to determine truth/falsity based on prior knowledge of truth/ falsity of smaller components.</p>
   </section>
