--- a/src/truth-tables.html
+++ b/src/truth-tables.html
@@ -40,7 +40,7 @@ MathJax = {
 
   <!-- Slide -->
   <section>
-  <h2>Determining truth-values MAKING BIG CHANGES HERE</h2>
+  <h2>Determining truth-values</h2>
   <p>The basic question is: how is the truth-value of a complex proposition a function of the truth-values of its corresponding parts? More specifically, we can ask: Consider $p\rightarrow (q\vee r)$. Suppose you knew that $r$ is false while $p,q$ are true. Is $p\rightarrow (q\vee r)$ true or false?</p>
   <p>We develop a general method for answering these questions. This is useful since often the sentences whose truth we’re interested in are complex, and so the method gives us a way to determine truth/falsity based on prior knowledge of truth/ falsity of smaller components.</p>
   </section>
@@ -94,8 +94,8 @@ MathJax = {
   </pre>
   <p>We can apply this truth-table by thinking about its two rows as two rules governing negation:</p>
   <ul>
-  <li><em>First rule governing negation</em>: If $\phi$ is true, then $\neg \phi$ is false.</li>
-  <li><em>Second rule governing negation</em>: If $\phi$ is false, then $\neg \phi$ is true.</li>
+  <li>If $\phi$ is true, then $\neg \phi$ is false.</li>
+  <li>If $\phi$ is false, then $\neg \phi$ is true.</li>
   </ul>
   </section>
 
