--- a/truth-tables.html
+++ b/truth-tables.html
@@ -94,8 +94,8 @@ MathJax = {
   </pre>
   <p>We can apply this truth-table by thinking about its two rows as two rules governing negation:</p>
   <ul>
-  <li>If $\phi$ is true, then $\neg \phi$ is false.</li>
-  <li>If $\phi$ is false, then $\neg \phi$ is true.</li>
+  <li>If $p$ is true, then $\neg p$ is false.</li>
+  <li>If $p$ is false, then $\neg p$ is true.</li>
   </ul>
   </section>
 
