--- a/natural_deduction_and_arrow.html
+++ b/natural_deduction_and_arrow.html
@@ -40,6 +40,12 @@ MathJax = {
 
   <!-- Slide -->
   <section>
+  <h1>Natural deduction for propositional logic</h1>
+  </section>
+
+
+  <!-- Slide -->
+  <section>
   <h2>Motivations for natural deduction</h2>
   <p>Natural deduction is a proof system in which proofs go from premises to conclusions by means of rules tailored to the connectives.</p>
   <p>It turns out that all valid arguments have proofs, and only valid arguments have proofs.</p>
