--- a/src/truth-tables.html
+++ b/src/truth-tables.html
@@ -37,6 +37,10 @@ MathJax = {
 <body>
 <article class="deck">
 
+  <!-- Slide -->
+  <section>
+  <h1>Truth tables</h1>
+  </section>
 
   <!-- Slide -->
   <section>
